[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Scenes/SceneSwitcher.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Score.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Inventory.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/SpeechBubble.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Minigames/Throwgarbage/Cat.tscn" type="PackedScene" id=6]
[ext_resource path="res://Art/Calibri Regular.ttf" type="DynamicFontData" id=7]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../Cat:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -328, 466 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "entry"
tracks/0/type = "value"
tracks/0/path = NodePath("../Cat:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -328, 466 ), Vector2( 317, 460 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "exit"
tracks/0/type = "value"
tracks/0/path = NodePath("../Cat:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 317, 460 ), Vector2( 317, 460 ) ]
}

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 7 )

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="SceneSwitcher" parent="." instance=ExtResource( 2 )]

[node name="Score" parent="." instance=ExtResource( 3 )]
position = Vector2( 1, -19 )

[node name="Inventory" parent="." instance=ExtResource( 4 )]

[node name="EndGame" type="Node2D" parent="."]

[node name="SpeechBubble" parent="EndGame" instance=ExtResource( 5 )]
position = Vector2( 425, 99 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="EndGame"]
root_node = NodePath("../SpeechBubble")
anims/RESET = SubResource( 2 )
anims/entry = SubResource( 3 )
anims/exit = SubResource( 4 )

[node name="Cat" parent="EndGame" instance=ExtResource( 6 )]
position = Vector2( -328, 466 )
scale = Vector2( 0.5, 0.5 )

[node name="Button" type="Button" parent="EndGame"]
margin_left = 1144.0
margin_top = 861.0
margin_right = 1845.0
margin_bottom = 1002.0
custom_fonts/font = SubResource( 1 )
text = "Verder met het spel!"

[connection signal="pressed" from="EndGame/Button" to="." method="_on_Button_pressed"]
